--- a/app/src/main/res/layout/activity_schedule_list.xml
+++ b/app/src/main/res/layout/activity_schedule_list.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeScreen">
+    android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/btnScheduleWorkout"
+        android:id="@+id/btnAddSchedule"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Schedule Workout"
+        android:text="Add Schedule"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="64dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"/>
-
-    <Button
-        android:id="@+id/btnStartWorkout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Start Workout"
-        app:layout_constraintTop_toBottomOf="@id/btnScheduleWorkout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
+
+    <ListView
+        android:id="@+id/scheduleListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/btnAddSchedule"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
