--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -30,4 +30,17 @@
         android:layout_marginTop="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"/>
+
+    <Button
+        android:id="@+id/btnViewHistory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="View History &amp; Progress"
+        app:layout_constraintTop_toBottomOf="@id/btnStartWorkout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
